--- a/a7.html
+++ b/a7.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final Test Lab</title>
-</head>
-<body>
-    <h1 style="size: 8; color: green;">Final test lab</h1><br><br>
-	Number of rows: <input type="text" id="t1" /><br><br>
-	Number of cols: <input type="text" id="t2" /><br><br>
-	
-	<button id="b1" onclick="generateTable()">Generate Table</button><br><br>
-	
-	<button id="b2" onclick="addColumn()">Add Column</button>
-	
-	<button id="b3" onclick="addRow()">Add Row</button>
-		
-	<script language="javascript"></script>
-</body>
+  </head>
+  <body>
+    <h1 style="size: 8; color: green">Final test lab</h1>
+    <br /><br />
+    Number of rows: <input type="text" id="t1" /><br /><br />
+    Number of cols: <input type="text" id="t2" /><br /><br />
+
+    <button id="b1" onclick="generateTable()">Generate Table</button
+    ><br /><br />
+
+    <button id="b2" onclick="addColumn()">Add Column</button>
+
+    <button id="b3" onclick="addRow()">Add Row</button>
+
+    <div id="tableContainer">
+
+    </div>
+
+    <script language="javascript">
+      function generateTable() {
+        var rows = parseInt(document.getElementById("t1").value);
+        var cols = parseInt(document.getElementById("t2").value);
+
+        var table = document.createElement("table");
+
+        for (var i = 0; i < rows; i++) {
+          var row = table.insertRow();
+          for (var j = 0; j < cols; j++) {
+            var cell = row.insertCell();
+            cell.innerHTML = "Row " + (i + 1) + ", Column " + (j + 1);
+          }
+        }
+
+        var tableContainer = document.getElementById("tableContainer");
+        tableContainer.innerHTML = "";
+        tableContainer.appendChild(table);
+
+        document.getElementById("b1").style.display = "none";
+        document.getElementById("t1").style.display = "none";
+        document.getElementById("t2").style.display = "none";
+      }
+
+    </script>
+  </body>
 </html>
