--- a/a7.html
+++ b/a7.html
@@ -32,9 +32,11 @@
 			
 			for (var i = 0; i < rows; i++) {
 				var row = table.insertRow();
+                row.style.height = "30px";
 				for (var j = 0; j < cols; j++) {
 					var cell = row.insertCell();
 					cell.style.border = "1px solid black";
+                    cell.style.width = "80px";
 				}
 			}
 			
